# jungle-engine

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  jge-profile.md
.github/: copilot-instructions.md
docs/: tutorial.md
jge-cli/: Cargo.toml
jge-core/: Cargo.toml
jge-core/src/: aabb.rs  config.rs  event.rs  game.rs  lib.rs  logger.rs  resource.rs  scene_macro_tests.rs  scenes.rs  text.rs  window.rs
jge-core/src/game/: component.rs  entity.rs  logic.rs  reachability.rs  runtime.rs  spatial.rs  system.rs
jge-core/src/game/component/: aabb_border.rs  background.rs  camera.rs  layer.rs  light.rs  material.rs  node.rs  renderable.rs  scene2d.rs  scene3d.rs  shape.rs  transform.rs
jge-core/src/game/runtime/: dispatch.rs  helpers.rs  init.rs  shutdown.rs  tests.rs  windowing.rs
jge-core/src/game/system/: logic.rs  logic_registry.rs  render.rs
jge-core/src/game/system/render/: background.rs  cache.rs  dirty.rs  profile.rs  resource_io.rs  scene2d.rs  scene3d.rs  snapshot.rs  util.rs
jge-core/src/game/system/render/scene3d/: camera.rs  depth.rs  material.rs  pipeline.rs
jge-core/src/resource/shaders/: 2d.fs  2d.vs  3d.fs  3d.vs  background.fs  background.vs
jge-core/src/resource_testdata/: resources_dir.yaml  resources_embeddir.yaml
jge-core/tests/: scene_macro_ui.rs
jge-core/tests/ui/: scene_invalid_item_fail.rs  scene_invalid_item_fail.stderr  scene_progress_expr_pass.rs  scene_progress_n_zero_literal_fail.rs  scene_progress_n_zero_literal_fail.stderr  scene_two_roots_fail.rs  scene_two_roots_fail.stderr
jge-macros/: Cargo.toml
jge-macros/src/: component_attr.rs  component_impl_attr.rs  lib.rs  resource_macro.rs  scene_macro.rs
jge-tpl/: Cargo.toml
jge-tpl/src/: main.rs  resources.yaml
jge-tpl/src/resource/shaders/: background_horizon.fs
