[package]
name = "jge-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
backtrace = "0.3"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tracing = { version = "0.1.43", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wgpu = { version = "27.0.1", features = ["glsl"] }
winit = "0.30.12"
parking_lot = { version = "0.12", features = ["arc_lock"] }
jge-macros = { path = "../jge-macros" }
async-trait = "0.1"
tempfile = "3.10"
nalgebra = "0.34.1"
lodtree = "0.1.4"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
inventory = "0.3"
uuid = { version = "1.11", features = ["v4"] }
fontdb = "0.23"
fontdue = "0.9"
ttf-parser = "0.25"

[dev-dependencies]
trybuild = "1.0"
