[package]
name = "jge-tpl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
jge-core = { version = "0.1.0", path = "../jge-core" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
nalgebra = "0.34.1"
async-trait = "0.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.43", features = ["async-await"] }
winit = "0.30.12"
uuid = { version = "1", features = ["v4", "v5"] }
